# MonkeyType

./: CMakeLists.txt  README.md  main.cpp
Assets/Data/: game.txt  popular.txt
Extension/: TextParameter.h
Helper/AlignCenter/: AlighnCenter.cpp  AlignCenter.h
Helper/GameLoader/: GameLoad.cpp  GameLoad.h
Helper/GameReloader/: GameReloader.cpp  GameReloader.h
Helper/Generator_Word/: words_generator.cpp  words_generator.h
Helper/Operator/: Erase_operator.cpp  Erase_operator.h
Helper/ParticleDraw/: drawParticles.cpp  drawParticles.h
Helper/SaveGame/: SaveGame.cpp  saveGame.h
Helper/ScoreSaverReader/: GameSave.cpp  GameSave.h  GameScoreReader.cpp  GameScoreReader.h
Helper/WordChecker/: WordChecker.cpp  WordChecker.h
Helper/WordsDraw/: WordsDraw.cpp  WordsDraw.h
